<resources>
    <string name="app_name">GameRecommendApp</string>
    <string name="hello">HELLO</string>
    <string name="japan">はじめまして</string>
    <string name="englishbtn">Button</string>
    <string name="chinabtn">Button</string>
    <string name="japanbtn">Button</string>
    <string name="china">Hěn gāoxìng jiàn dào nǐ</string>
    <string name="englishbutton">English</string>
    <string name="chinabutton">中文</string>
    <string name="japanbutton">日本語</string>
    <string name="choose_your_symptom">Choose your symptom</string>
    <string name="radiobutton">RadioButton</string>
    <string name="stomachache">Stomachache</string>
    <string name="next">Next</string>
    <string name="headache">Headache</string>
    <string name="teethache">Teethache</string>
    <string name="menstrual_pain">Menstrual pain</string>
    <string name="abrasion">Abrasion</string>
    <string name="sore_throat">Sore throat</string>
    <string name="indigestion">Indigestion</string>
    <string name="选择你的症状">选择你的症状</string>
    <string name="下一个">下一个</string>
    <string name="头痛">头痛</string>
    <string name="消化不良">消化不良</string>
    <string name="牙疼">牙疼</string>
    <string name="擦伤">擦伤</string>
    <string name="月经痛">月经痛</string>
    <string name="咽喉痛">咽喉痛</string>
    <string name="腹痛">腹痛</string>
    <string name="症状を選択してください">症状を選択してください</string>
    <string name="次">次</string>
    <string name="ふくつう">ふくつう</string>
    <string name="せいりつう">せいりつう</string>
    <string name="喉の痛み">喉の痛み</string>
    <string name="はいた">はいた</string>
    <string name="さっかしょう">さっかしょう</string>
    <string name="しょうかふりょう">しょうかふりょう</string>
    <string name="ずつう">ずつう</string>
    <string name="textview">TextView</string>
    <string name="tv1">TextView</string>
    <string name="nextbtn3">Button</string>
    <string name="tv2">TextView</string>
    <string name="img1">TODO</string>
    <string name="tva1">TextView</string>
    <string name="tva2">TextView</string>
    <string name="btna">Button</string>
    <string name="tva3">TextView</string>
    <string name="todoa1">TODO</string>
    <string name="tvb1">TextView</string>
    <string name="tvb2">TextView</string>
    <string name="tvb3">TextView</string>
    <string name="nextbtnb">Next</string>
    <string name="busimg">TODO</string>
    <string name="nextbtna">Next</string>
    <string name="tve1">TextView</string>
    <string name="tve2">TextView</string>
    <string name="tve3">TextView</string>
    <string name="nextbtne">Button</string>
    <string name="ezn">TODO</string>
    <string name="tvq1">TextView</string>
    <string name="tvq2">TextView</string>
    <string name="tvq3">TextView</string>
    <string name="nextbtnq">Button</string>
    <string name="qusid">TODO</string>
    <string name="nextbtne1">Next</string>
    <string name="nextbtns1">Next</string>
    <string name="tvs1">TextView</string>
    <string name="tvs2">TextView</string>
    <string name="tvs3">TextView</string>
    <string name="str">TODO</string>
    <string name="open_mapa">Open Map</string>
    <string name="neara">Search for pharmarcies near you</string>
    <string name="nearb">Search for pharmacies near you</string>
    <string name="neare">Search for pharmacies near you</string>
    <string name="nearq">Search for pharmacies near you</string>
    <string name="nears">Search for pharmacies near you</string>
    <string name="neart">Search for pharmacies near you</string>
    <string name="where">Where is pharmacies?</string>
    <string name="marqueehello">Hello \n \n \n \n \n \n \n \n \n \n \n \n \n \n \n \n \n \n \n \n</string>
    <string name="marqueejahello">\n \n \n \n \n \n \n \n はじめまして \n \n \n \n \n \n \n \n \n</string>
    <string name="marqueechinahello">\n \n \n \n \n \n \n \n \n \n \n \n \n \n \n \n \n 很高兴见到你</string>
</resources>
